--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Easybank landing page</title>
 
@@ -37,7 +35,7 @@
 		</div>
 		
 		<div class="right-quarter-section">
-			<img id="blob" src="./images/bg-intro-desktop.svg"></img>
+			<img id="blob" src="./bg-intro-desktop.svg"></img>
 		</div>
 	
 	</div>
@@ -50,28 +48,28 @@
 		
 		<div class="card-container">
 			<div class="card">
-				<img class="card-img" src="./images/icon-online.svg"></img>
+				<img class="card-img" src="./icon-online.svg"></img>
 				<h3>Online Banking</h3>
 				<p>Our modern web and mobile applications allow you to keep track of your finances 
 					wherever you are in the world.</p>
 			</div>
 			
 			<div class="card">
-				<img class="card-img" src="./images/icon-budgeting.svg"></img>
+				<img class="card-img" src="./icon-budgeting.svg"></img>
 				<h3>Simple Budgeting</h3>
 				<p>See exactly where your money goes each month. Receive notifications when you’re 
 					close to hitting your limits.</p>
 			</div>
 			
 			<div class="card">
-				<img class="card-img" src="./images/icon-onboarding.svg"></img>
+				<img class="card-img" src="./icon-onboarding.svg"></img>
 				<h3>Fast Onboarding</h3>
 				<p>We don’t do branches. Open your account in minutes online and start taking control 
 					of your finances right away.</p>
 			</div>
 			
 			<div class="card">
-				<img class="card-img" src="./images/icon-api.svg"></img>
+				<img class="card-img" src="./icon-api.svg"></img>
 				<h3>Open API</h3>
 				<p>Manage your savings, investments, pension, and much more from one account. Tracking 
 					your money has never been easier.</p>
@@ -85,7 +83,7 @@
 		<h2>Latest Articles</h2>
 
 			<div class="article" id="1">
-				<img class="article-img" src="./images/image-currency.jpg"></img>
+				<img class="article-img" src="./image-currency.jpg"></img>
 				<p class="article-author">By Claire Robinson</p>
 				<p class="article-heading">Receive money in any currency with no fees</p>
 				<p class="article-preview">The world is getting smaller and we’re becoming more mobile. So why should you be 
@@ -93,7 +91,7 @@
 			</div>
 
 			<div class="article" id="2">
-				<img class="article-img" src="./images/image-restaurant.jpg"></img>
+				<img class="article-img" src="./image-restaurant.jpg"></img>
 				<p class="article-author">By Wilson Hutton</p>
 				<p class="article-heading">Treat yourself without worrying about money</p>
 				<p class="article-preview">Our simple budgeting feature allows you to separate out your spending and set 
@@ -101,7 +99,7 @@
 			</div>
 
 			<div class="article" id="3">
-				<img class="article-img" src="./images/image-plane.jpg"></img>
+				<img class="article-img" src="./image-plane.jpg"></img>
 				<p class="article-author">By Wilson Hutton</p>
 				<p class="article-heading">Take your Easybank card wherever you go</p>
 				<p class="article-preview">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
@@ -109,7 +107,7 @@
 			</div>
 
 			<div class="article" id="4">
-				<img class="article-img" src="./images/image-confetti.jpg"></img>
+				<img class="article-img" src="./image-confetti.jpg"></img>
 				<p class="article-author">By Claire Robinson</p>
 				<p class="article-heading">Our invite-only Beta accounts are now live!</p>
 				<p class="article-preview">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
